# giffler

./: .gitignore  Makefile.am  README.md  configure.ac
src/: Makefile.am  convert_command.cpp  convert_command.hpp  ext.hpp  main.cpp  pack_command.cpp  pack_command.hpp  unpack_command.cpp  unpack_command.hpp
